[tool.poetry]
name = "pipeline-docker"
version = "0.2.0"
description = ""
authors = ["Paul Hetherington <ph@mystic.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
pipeline-ai = "^0.2.0"
SQLAlchemy = "^1.4.29"
SQLAlchemy-Utils = "^0.38.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
